fixed style overlaps

--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -53,10 +53,11 @@ div.clickToSort
 div.tableLabel 
 {
     font-size: 26px;
+    text-align: center;
     position: absolute;
     top: 45;
-    right: 110;
-    width: 40%;
+    left: 1000;
+    right: 100;
 }
 div.myDataTable 
 {
